# dear_nes

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  imgui.ini
libs/dear_nes_lib/: CMakeLists.txt
libs/dear_nes_lib/dear_nes_lib/: CMakeLists.txt
libs/dear_nes_lib/dear_nes_lib/src/: bus.cpp  cartridge.cpp  cartridge_header.cpp  dma.cpp  nes.cpp  ppu.cpp
libs/dear_nes_lib/dear_nes_lib/src/include/dear_nes_lib/: cartridge_loader.h  cpu.h
res/shaders/: simple-shader.vs
src/: app_widget_manager.cpp  audio_manager.cpp  base_widget.cpp  bus.cpp  cartridge.cpp  cartridge_loader.cpp  controller_widget.cpp  cpu.cpp  cpu_widget.cpp  dearnes_audio_source.cpp  dearnes_base_widget.cpp  dearnes_window_manager.cpp  file_manager.cpp  imgui_cartridge_explorer.cpp  imgui_widget_manager.cpp  imgui_window_manager.cpp  instruction_disassembler.cpp  logger.cpp  main.cpp  main2.cpp  mapper.cpp  mapper_000.cpp  nes.cpp  nes_widget.cpp  new_main.cpp  ppu.cpp  ppu2.cpp  ppu_imgui_widgets.cpp  ppu_nametable_widget.cpp  ppu_palettes_widget.cpp  ppu_pattern_table_widget.cpp  ram_widget.cpp  sample_widget.cpp  screen_widget.cpp  shader.cpp  simple_wave.cpp  sprite.cpp  status_widget.cpp  texture_image.cpp  ui_config.cpp
src/helpers/: RootDir.h.in
src/imgui_layer/: imgui_nes_controller_window.cpp  imgui_nes_cpu_window.cpp  imgui_nes_ppu_nametable_window.cpp  imgui_nes_ppu_pattern_table_window.cpp  imgui_nes_screen_window.cpp  imgui_nes_status_window.cpp  imgui_nes_window_manager.cpp  imgui_sample_window.cpp  imgui_texture_image.cpp  imgui_window.cpp  imgui_window_manager.cpp
src/include/: app_widget_manager.h  audio_manager.h  base_widget.h  bus.h  cartridge.h  controller_widget.h  cpu.h  cpu_widget.h  dearnes_audio_source.h  dearnes_base_widget.h  dearnes_window_manager.h  file_manager.h  global_nes.h  imgui_cartridge_explorer.h  imgui_widget_manager.h  imgui_window_manager.h  instruction_disassembler.h  logger.h  mapper.h  mapper_000.h  nes.h  nes_widget.h  ppu.h  ppu2.h  ppu_imgui_widgets.h  ppu_nametable_widget.h  ppu_palettes_widget.h  ppu_pattern_table_widget.h  ram_widget.h  sample_widget.h  screen_widget.h  shader.h  simple_wave.h  sprite.h  status_widget.h  texture_image.h  ui_config.h  virtual6502.h
src/include/dear_nes_lib/: bus.h  cartridge.h  cartridge_header.h  dma.h  enums.h  mapper.h  mapper_000.h  nes.h  ppu.h
src/include/imgui_layer/: imgui_nes_controller_window.h  imgui_nes_cpu_window.h  imgui_nes_ppu_nametable_window.h  imgui_nes_ppu_pattern_table_window.h  imgui_nes_screen_window.h  imgui_nes_status_window.h  imgui_nes_window_manager.h  imgui_sample_window.h  imgui_texture_image.h  imgui_window.h  imgui_window_manager.h
